code cleanup on spell effects and spells starting with A - addressed warnings - javadoc cleanup - code reformat